--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -1,11 +1,13 @@
-<select placeholder="filter">
-  <option>Test 1</option>
-  <option>Test 2</option>
-  <option>Test 3</option>
-  <option>Test 4</option>
-  <option>Test 5</option>
-  <option>Test 6</option>
-</select>
+<div class="select-wrapper">
+  <select placeholder="filter">
+    <option>Test 1</option>
+    <option>Test 2</option>
+    <option>Test 3</option>
+    <option>Test 4</option>
+    <option>Test 5</option>
+    <option>Test 6</option>
+  </select>
+</div>
 
 <table>
   <thead>
