--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -1,5 +1,5 @@
 <div class="select-wrapper">
-  <select placeholder="filter">
+  <select placeholder="filter2">
     <option>Test 1</option>
     <option>Test 2</option>
     <option>Test 3</option>
