--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@ select-wrapper {
 }
 
 .select-wrapper:before {
-    content: '\f0d7';
+    content: 'AAA';
     font-family: FontAwesome;
     color: #fff;
     display: inline-block;
