--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,9 +21,9 @@ select-wrapper {
 }
 
 .select-wrapper:before {
-    content: 'AAA';
+    content: '/f0d7';
     font-family: FontAwesome;
-    color: #fff;
+    color: #000;
     display: inline-block;
     position: absolute;
     right: 20px;
