--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -1,6 +1,7 @@
+Series:
 <div class="select-wrapper">
   <select placeholder="filter2">
-    <option>Test 1</option>
+    <option>All</option>
     <option>Test 2</option>
     <option>Test 3</option>
     <option>Test 4</option>
