--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ table, th, td {
 
 .select-wrapper {
   position: relative;
-  position: inline-block;
+  display: inline-block;
 }
 
 .select-wrapper:before {
