--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -1,13 +1,15 @@
-Series:
-<div class="select-wrapper">
-  <select placeholder="filter2">
-    <option>All</option>
-    <option>Test 2</option>
-    <option>Test 3</option>
-    <option>Test 4</option>
-    <option>Test 5</option>
-    <option>Test 6</option>
-  </select>
+<div>
+  Series:
+  <div class="select-wrapper">
+    <select placeholder="filter2">
+      <option>All</option>
+      <option>Test 2</option>
+      <option>Test 3</option>
+      <option>Test 4</option>
+      <option>Test 5</option>
+      <option>Test 6</option>
+    </select>
+  </div>
 </div>
 
 <table>
