--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -14,20 +14,20 @@
 
 <div class="spacer"></div>
 
-<table>
+<table class="amiibo-table">
   <thead>
     <tr>
-      <th style="text-align: left">Name</th>
-      <th style="text-align: left">Series</th>
-      <th style="text-align: left">Notes</th>
+      <th>Name</th>
+      <th>Series</th>
+      <th>Notes</th>
     </tr>
   </thead>
   <tbody>
     {% for amiibo in site.data.amiibo.units %}
       <tr>
-        <td style="text-align: left"><strong>{{ amiibo.name }}</strong></td>
-        <td style="text-align: left">{{ amiibo.name }}</td>
-        <td style="text-align: left"><em>{{ amiibo.notes }}</em></td>
+        <td class="name"><strong>{{ amiibo.name }}</strong></td>
+        <td class="series">{{ amiibo.series }}</td>
+        <td class="notes"><em>{{ amiibo.notes }}</em></td>
       </tr>
     {% endfor %}
   </tbody>
