--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -32,3 +32,9 @@
     {% endfor %}
   </tbody>
 </table>
+
+<script>
+  var userList = new List('amiibo-table', {
+    valueNames: ['name', 'series', 'notes']
+  });
+</script>
