--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -41,7 +41,7 @@
       userList.filter();
     } else {
       userList.filter(function(item) {
-        retrun item.values().series == select.value;
+        return item.values().series == select.value;
       });
     }
   }
