--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -40,6 +40,7 @@
     if (select.value == 'All') {
       userList.filter();
     } else {
+      debugger;
       userList.filter(function(item) {
         return item.values().series == select.value;
       });
