--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -12,7 +12,7 @@
 
 <div class="spacer"></div>
 
-<table>
+<table id="amiibo-table">
   <thead>
     <tr>
       <th>Name</th>
@@ -20,7 +20,7 @@
       <th>Notes</th>
     </tr>
   </thead>
-  <tbody id="amiibo-table">
+  <tbody class="list">
     {% for amiibo in site.data.amiibo.units %}
       <tr>
         <td class="name"><strong>{{ amiibo.name }}</strong></td>
