--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -8,6 +8,8 @@
       {% endfor %}      
     </select>
   </div>
+  Search:
+  <input type="text" class="search"/>
 </div>
 
 <div class="spacer"></div>
