--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -9,7 +9,7 @@
     </select>
   </div>
   Search:
-  <input type="text" class="search"/>
+  <input type="text" onchange="searchChanged(this)"/>
 </div>
 
 <div class="spacer"></div>
@@ -46,5 +46,10 @@
         return item.values().series == select.value;
       });
     }
+  }
+  
+  function searchChanged(search) {
+    console.log(search);
+    debugger;
   }
 </script>
