--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -49,7 +49,6 @@
   }
   
   function searchChanged(search) {
-    console.log(search);
-    debugger;
+    amiiboTable.filter(search.value);
   }
 </script>
