--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -49,6 +49,6 @@
   }
   
   function searchChanged(search) {
-    amiiboTable.filter(search.value);
+    amiiboTable.search(search.value);
   }
 </script>
