--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -9,7 +9,7 @@
     </select>
   </div>
   Search:
-  <input type="text" onchange="searchChanged(this)"/>
+  <input type="text" oninput="searchChanged(this)"/>
 </div>
 
 <div class="spacer"></div>
