--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,9 +33,9 @@ table, th, td {
     pointer-events: none;
 }
 
-select {
+input, select {
   border: 1px solid #ccc;
-  background-color: transparent;
+  background: none;
   border-radius: 0px;
   padding: 3px 20px 3px 5px;
   -webkit-appearance: none;
@@ -44,7 +44,7 @@ select {
   color: #6d6d6d;
 }
 
-select:focus { 
+inout:focus, select:focus { 
   outline: none;
 }
 
