--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -1,11 +1,11 @@
-<div>
-  <div class="block">
-    Search:
+<div class="container">
+  <div class="block filter-row">
+    <label>Search:</label>
     <input type="text" oninput="searchChanged(this)"/>
   </div>
     
   <div class="block">
-    Series:
+    <label>Series:</label>
     <div class="select-wrapper">
       <select onchange="seriesSelected(this)">
         <option>All</option>
