--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="block filter-row">
+<div class="container filter-row">
+  <div class="block">
     <label>Search:</label>
     <input type="text" oninput="searchChanged(this)"/>
   </div>
