--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -1,11 +1,11 @@
 <div class="container filter-row">
-  <div class="block">
-    <label>Search:</label>
+  <div class="block search-block">
+    Search:
     <input type="text" oninput="searchChanged(this)"/>
   </div>
     
-  <div class="block">
-    <label>Series:</label>
+  <div class="block series-block">
+    Series:
     <div class="select-wrapper">
       <select onchange="seriesSelected(this)">
         <option>All</option>
