--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -1,11 +1,11 @@
 <div class="container filter-row">
   <div class="block search-block">
-    Search:
+    <label>Search:</label>
     <input type="text" oninput="searchChanged(this)"/>
   </div>
     
   <div class="block series-block">
-    Series:
+    <label>Series:</label>
     <div class="select-wrapper">
       <select onchange="seriesSelected(this)">
         <option>All</option>
