--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,8 +27,9 @@ table, th, td {
     color: #6d6d6d;
     display: inline-block;
     position: absolute;
+    line-height: 16px;
     right: 7px;
-    top: 2px;
+    top: 5px;
     pointer-events: none;
   }
 }
