--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,7 @@ input, select {
   border: 1px solid #ccc;
   background: none;
   border-radius: 0px;
+  margin: 0;
   padding: 3px 20px 3px 5px;
   -webkit-appearance: none;
   font-size: 16px;
