--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,6 +41,7 @@ input, select {
   padding: 3px 20px 3px 5px;
   -webkit-appearance: none;
   font-size: 16px;
+  line-height: 16px;
   font-weight: 300;
   color: #6d6d6d;
   
