--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,6 +44,7 @@ input, select {
   line-height: 16px;
   font-weight: 300;
   color: #6d6d6d;
+  box-sizing: content-box;
   
   &:focus {
     outline: none;
