--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,9 +42,9 @@ input, select {
   -webkit-appearance: none;
   font-size: 16px;
   line-height: 16px;
+  height: 16px;
   font-weight: 300;
   color: #6d6d6d;
-  box-sizing: content-box;
   
   &:focus {
     outline: none;
