--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -1,2 +1,4 @@
-<input type="email" placeholder="your email"/>
-<textarea></textarea>
+<div>Your email</div>
+<div><input type="email" placeholder="your email"/></div>
+<div>Message</div>
+<div><textarea></textarea></div>
