--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,7 +33,7 @@ table, th, td {
   }
 }
 
-input, select {
+input, select, textarea {
   border: 1px solid #ccc;
   background: none;
   border-radius: 0px;
