--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,6 +53,12 @@ input, select, textarea {
   }
 }
 
+textarea {
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%
+}
+
 .block {
   display: inline-block;
 }
