--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -1,4 +1,4 @@
 <div>Your email</div>
-<div><input type="email" placeholder="your email"/></div>
+<div><input type="email"/></div>
 <div>Message</div>
 <div><textarea></textarea></div>
