--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,7 +57,8 @@ textarea {
   width: 100%;
   height: 150px;
   min-width: 100%;
-  max-width: 100%
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .block {
