--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -1,4 +1,6 @@
-<div>Your email</div>
-<div><input type="email"/></div>
-<div>Message</div>
-<div><textarea></textarea></div>
+<div class="get-in-touch">
+  <div>Your email</div>
+  <div><input type="email"/></div>
+  <div>Message</div>
+  <div><textarea></textarea></div>
+</div>
