--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -3,4 +3,5 @@
   <div><input type="email"/></div>
   <div>Message</div>
   <div><textarea></textarea></div>
+  <div><button>Send</button></div>
 </div>
