--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,10 +70,11 @@ button {
     color: #eee;
     font-weight: 300;
     padding: 8px;
-    background-color: deepskyblue;
+    background-color: #00BFFD;
   
     &:hover {
       color: #fff;
+      background-color: #FF0000;
     }
 }
 
