--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,7 +65,7 @@ textarea {
 }
 
 button {
-    border: 1px solid #ccc;
+    border: none;
     font-size: 16px;
     color: #eee;
     font-weight: 300;
