--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -69,7 +69,7 @@ button {
     font-size: 16px;
     color: #eee;
     font-weight: 300;
-    padding: 8px;
+    padding: 10px 15px;
     background-color: #00BFFD;
   
     &:hover {
