--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,10 +70,11 @@ button {
     color: #eee;
     font-weight: 300;
     padding: 10px 15px;
-    background-color: #00BFFD;
+    background-color: #00ACE6;
   
     &:hover {
       color: #fff;
+      background-color: #00BFFD;
     }
   
     &:focus {
