--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -1,5 +1,5 @@
 <div class="get-in-touch">
-  <div class="thank-you">Your message has been sent. Thank You.</div>
+  <div class="thank-you hidden">Your message has been sent. Thank You.</div>
   <div>Your email</div>
   <div><input type="email"/></div>
   <div>Message</div>
