--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -1,8 +1,10 @@
 <div class="get-in-touch">
   <div class="thank-you hidden">Your message has been sent. Thank You.</div>
-  <div>Your email</div>
-  <div><input type="email"/></div>
-  <div>Message</div>
-  <div><textarea></textarea></div>
-  <div><button>Send</button></div>
+  <div class="form">
+    <div>Your email</div>
+    <div><input type="email"/></div>
+    <div>Message</div>
+    <div><textarea></textarea></div>
+    <div><button>Send</button></div>
+  </div>
 </div>
