--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -5,6 +5,12 @@
     <div><input type="email"/></div>
     <div>Message</div>
     <div><textarea></textarea></div>
-    <div><button>Send</button></div>
+    <div><button onclick="submitGetInTouch()">Send</button></div>
   </div>
 </div>
+
+<script>
+  function submitGetInTouch() {
+    console.log('SUBMITTING');
+  }
+</script>
