--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -11,6 +11,8 @@
 
 <script>
   function submitGetInTouch() {
-    console.log('SUBMITTING');
+    document.querySelectorAll('.get-in-touch > .form').forEach((element) => {
+	    console.log(element);
+    });
   }
 </script>
