--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -1,6 +1,6 @@
 <div class="get-in-touch">
-  <div class="thank-you hidden">Your message has been sent. Thank You.</div>
-  <div class="form">
+  <div class="thank-you hidden animated">Your message has been sent. Thank You.</div>
+  <div class="form animated">
     <div>Your email</div>
     <div><input type="email"/></div>
     <div>Message</div>
