--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -14,6 +14,7 @@
     $('.get-in-touch > .form').addClass('hidden');
     $('.get-in-touch > .thank-you').removeClass('hidden');
     
+    debugger;
     console.log($('.get-in-touch > .form > .email').first().val());
     console.log($('.get-in-touch > .form > .body').first().val());
   }
