--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -15,7 +15,7 @@
     $('.get-in-touch > .thank-you').removeClass('hidden');
     
     debugger;
-    console.log($('.get-in-touch > .form > .email').first().val());
-    console.log($('.get-in-touch > .form > .body').first().val());
+    console.log($('.get-in-touch > .form .email').first().val());
+    console.log($('.get-in-touch > .form .body').first().val());
   }
 </script>
