--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -13,6 +13,7 @@
   function submitGetInTouch() {
     var errors = [];
     
+    debugger;
     if (!isEmailValid($('.get-in-touch > .form .email').first().val())) {
       errors.push('Email address is invalid.');
     }
