--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -23,7 +23,7 @@
     }
     
     if (errors.length) {
-      $('.get-in-touch > .form .error').text(errors.join(' '));
+      $('.get-in-touch > .form .errors').text(errors.join(' '));
       return;
     }
 
