--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -5,7 +5,8 @@
     <div><input type="email" class="email"/></div>
     <div>Message</div>
     <div><textarea class="body"></textarea></div>
-    <div><button onclick="submitGetInTouch()">Send</button> <span class="errors"></span></div>
+    <div class="errors"></div>
+    <div><button onclick="submitGetInTouch()">Send</button></div>
   </div>
 </div>
 
