--- a/_includes/getInTouch.html
+++ b/_includes/getInTouch.html
@@ -35,7 +35,7 @@
     $.ajax({
       url: 'https://formspree.io/' + '6d61747437383136372b616d6969626f3540676d61696c2e636f6d'.match(/.{2}/g).map((a)=>String.fromCharCode(parseInt(a,16))).join(''), 
       method: 'POST',
-      data: {message},
+      data: {email, message},
       dataType: 'json'
     });
   }
