--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,18 +65,19 @@ textarea {
 }
 
 button {
-    border: none;
-    font-size: 16px;
-    color: #eee;
-    font-weight: 300;
-    padding: 10px 15px;
-    background-color: #00ACE6;
-  
-    &:hover, &:focus {
-      outline: none;
-      color: #fff;
-      background-color: #00BFFD;
-    }
+  border: none;
+  font-size: 16px;
+  color: #eee;
+  font-weight: 300;
+  padding: 10px 15px;
+  background-color: #00ACE6;
+  margin: 0;
+
+  &:hover, &:focus {
+    outline: none;
+    color: #fff;
+    background-color: #00BFFD;
+  }
 }
 
 .block {
