--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -42,7 +42,7 @@
   });
   
   amiiboTable.on('updated', function() {
-    debugger;
+    console.log(amiiboTable.visibleItems.length);
   });
   
   function seriesSelected(select) {
