--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -33,6 +33,9 @@
         <td class="notes"><em>{{ amiibo.notes }}</em></td>
       </tr>
     {% endfor %}
+      <tr class="no-matches hidden">
+        <td colspan="3">No Matches</td>
+      </tr>
   </tbody>
 </table>
 
