--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,9 +117,7 @@ button {
 }
 
 #amiibo-table {
-  .no-matches {
-    td {
-      text-align: center;
-    }
+  .no-matches td {
+    text-align: center;
   }
 }
