--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -45,7 +45,7 @@
   });
   
   amiiboTable.on('updated', function() {
-    if (amiiboTable.visibleItems.length)) {
+    if (amiiboTable.visibleItems.length) {
       $('#amiibo-table .no-matches').addClass('hidden');
     } else {
       $('#amiibo-table .no-matches').removeClass('hidden');
