--- a/_includes/amiiboTable.html
+++ b/_includes/amiiboTable.html
@@ -40,6 +40,10 @@
   No Matches
 </div>
 
+<p>
+  If something you need is not listed please let me know. I might be able to get it for you.
+</p>
+
 <script>
   var amiiboTable = new List('amiibo-table', {
     valueNames: ['name', 'series', 'notes']
